--- a/Phase1/GameCentre/app/src/main/res/layout/activity_main.xml
+++ b/Phase1/GameCentre/app/src/main/res/layout/activity_main.xml
@@ -5,4 +5,6 @@
     android:id="@+id/grid"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="fall2018.csc2017.slidingtiles.GameActivity" />
+    tools:context="fall2018.csc2017.slidingtiles.GameActivity" >
+
+</fall2018.csc2017.slidingtiles.GestureDetectGridView>
