Implemented ability to play 3x3 sliding tiles as well as a button for Settings.
Note that 4x4 sliding tiles is hard coded as default (lines 38 and 61 in StartingActivity), this can be changed manually to play 3x3, but we must somehow link settings with this functionality in order to have the player choose in game what version they want to play.

Also note the code supports 5x5 but we must create tile resources and uncomment the switch statement in order for it to work.

--- a/Phase1/GameCentre/app/src/main/res/layout/activity_starting_.xml
+++ b/Phase1/GameCentre/app/src/main/res/layout/activity_starting_.xml
@@ -53,4 +53,12 @@
         android:layout_toEndOf="@+id/StartButton"
         android:text="Save Game" />
 
+    <Button
+        android:id="@+id/SettingsButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/SaveButton"
+        android:layout_alignBottom="@+id/ScoreButton"
+        android:text="Settings" />
+
 </RelativeLayout>
