--- a/Phase1/GameCentre/app/src/main/res/layout/activity_starting_.xml
+++ b/Phase1/GameCentre/app/src/main/res/layout/activity_starting_.xml
@@ -59,6 +59,7 @@
         android:layout_height="wrap_content"
         android:layout_alignEnd="@+id/SaveButton"
         android:layout_alignBottom="@+id/ScoreButton"
-        android:text="Settings" />
+        android:text="Settings"
+        android:onClick="settingsPressed"/>
 
 </RelativeLayout>
