Created the User class, as well as modification of LoginActiviy and CreateAccountActivity

--- a/Phase1/GameCentre/app/src/main/res/layout/activity_create_account.xml
+++ b/Phase1/GameCentre/app/src/main/res/layout/activity_create_account.xml
@@ -31,14 +31,17 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/play"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="168dp"
-        android:text="@string/button_createAccount"
+        android:layout_marginStart="147dp"
+        android:layout_marginTop="130dp"
+        android:layout_marginEnd="149dp"
+        android:layout_marginBottom="79dp"
+        android:text="Play"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/passwordText" />
 
 </android.support.constraint.ConstraintLayout>
