--- a/Phase1/GameCentre/app/src/main/res/layout/activity_login.xml
+++ b/Phase1/GameCentre/app/src/main/res/layout/activity_login.xml
@@ -31,7 +31,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/SignIn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="168dp"
