--- a/Phase1/GameCentre/app/src/main/res/layout/activity_login.xml
+++ b/Phase1/GameCentre/app/src/main/res/layout/activity_login.xml
@@ -22,6 +22,7 @@
         android:id="@+id/usernameText"
         android:layout_width="212dp"
         android:layout_height="55dp"
+        android:layout_marginStart="5dp"
         android:layout_marginTop="144dp"
         android:hint="@string/username_hint"
         android:inputType="text"
