--- a/Phase1/GameCentre/app/src/main/res/layout/activity_create_account.xml
+++ b/Phase1/GameCentre/app/src/main/res/layout/activity_create_account.xml
@@ -31,14 +31,14 @@
         app:layout_constraintTop_toBottomOf="@+id/usernameText" />
 
     <Button
-        android:id="@+id/play"
+        android:id="@+id/createAccount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="147dp"
         android:layout_marginTop="130dp"
         android:layout_marginEnd="149dp"
         android:layout_marginBottom="79dp"
-        android:text="Play"
+        android:text="Create Account"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
