--- a/Phase1/GameCentre/app/src/main/res/layout/activity_login.xml
+++ b/Phase1/GameCentre/app/src/main/res/layout/activity_login.xml
@@ -32,7 +32,7 @@
         app:layout_constraintTop_toBottomOf="@+id/usernameText" />
 
     <Button
-        android:id="@+id/SignIn"
+        android:id="@+id/signIn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="168dp"
